--- a/Programa/templates/Dashboard.html
+++ b/Programa/templates/Dashboard.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
-    <link rel="stylesheet" href="/Programa/static/css/style.css">
+    <link rel="stylesheet" href="/FDS-2025-1-260/Programa/static/css/style.css">
 </head>
 
 <body>
@@ -108,7 +108,7 @@
                                 style="height: 240px; width: 300px; padding: 20px; border-radius: 20px;">
                                 <h4>Descripción Estados Unidos</h4>
                                 <p style="font-size: 14px; color: #ccc;"></p>
-                                <img src="/Programa/static/images/EEUU.png">
+                                <img src="/FDS-2025-1-260/Programa/static/images/EEUU.png">
                             </div>
                         </div>
 
@@ -331,12 +331,36 @@
             </section>
 
             <!-- Seccion Acerca de -->
-            <section id="section-1" style="display:none">
-                <div class="card card-dark">
-                    <h4>Sección ❗</h4>
-                    <p class="value">Acerca de</p>
-                </div>
-            </section>
+        <div style="display: flex; gap: 20px; padding: 20px;">
+
+            <!-- Primera imagen (section-1) -->
+                    <section id="section-1" style="padding: 0; margin: 0;">
+                        <div style="display: flex; justify-content: left; align-items: center; padding: 7px;">
+                                <div style="border-radius: 16px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
+                                    <img src="/FDS-2025-1-260/Programa/static/images/AD1.png"
+                                    style="display: block; width: 1000px; height: auto;" />
+                                </div>
+                        </div>
+            
+                    <section id="section-right" style="padding: 0; margin: 0;">
+                        <div style="display: flex; justify-content: left; align-items: center; padding: 7px;">
+                            <div style="border-radius: 12px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
+                                <img src="/FDS-2025-1-260/Programa/static/images/AD2.png"
+                                style="display: block; width: 1000px; height: auto;" />
+                            </div>
+                        </div>
+
+                             <section id="section" style="padding: 0; margin: 0;">
+                        <div style="display: flex; justify-content: left; align-items: center; padding: 7px;">
+                            <div style="border-radius: 12px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
+                                <img src="/FDS-2025-1-260/Programa/static/images/AD3.png"
+                                style="display: block; width: 1000px; height: auto;" />
+                            </div>
+                        </div>
+                    </section>
+                    
+            </div>
+
 
             <!-- Seccion Data base -->
             <section id="section-2" style="display:none; padding:20px;">
@@ -379,6 +403,7 @@
             <!-- Seccion Graficos -->
             <section id="section-3" class="section" style="display:none;">
                 <div class="cards" style="gap:20px; margin-bottom:20px;">
+
                     <div class="card card-dark"
                         style="flex:2; display:flex; flex-direction:column; border-radius:16px; padding:20px;">
                         <div
@@ -399,13 +424,27 @@
                                 <option value="9">Pregunta 9</option>
                             </select>
                         </div>
-                        <img id="chartImage" src="/Programa/static/images/p1.png" alt="Gráfico Pregunta 1"
+                        <img id="chartImage" src="/FDS-2025-1-260/Programa/static/images/p1.png" alt="Gráfico Pregunta 1"
                             style="width:100%; height:auto; border-radius:8px;" />
-
                     </div>
+
                     <div class="card card-dark"
-                        style="flex:1; border-radius:16px; padding:20px; display:flex; flex-direction:column; justify-content:center; align-items:center; background:#2b2b3d;">
-                        <div style="font-size:14px; color:#aaa; margin-bottom:8px;">Insights del grafico que salga xd
+                        style="flex:1; border-radius:16px; padding:20px; display:flex; flex-direction:column; justify-content:space-between ; background:#2b2b3d;">
+                        <div style="font-size:14px; color:#aaa; margin-bottom:8px;text-align:left; margin-top:0;"><h4 style="color:#fff; margin:0;">Insights</h4>
+                            <select id="timeframe"
+                                style="padding:4px 8px; border-radius:6px; border:none; background:#444; color:#fff;">
+                                <option value="1">Pregunta 1</option>
+                                <option value="2a">Pregunta 2a</option>
+                                <option value="2b">Pregunta 2b</option>
+                                <option value="3">Pregunta 3</option>
+                                <option value="4">Pregunta 4</option>
+                                <option value="5">Pregunta 5</option>
+                                <option value="6a">Pregunta 6a</option>
+                                <option value="6b">Pregunta 6b</option>
+                                <option value="7">Pregunta 7</option>
+                                <option value="8">Pregunta 8</option>
+                                <option value="9">Pregunta 9</option>
+                            </select>
                         </div>
                     </div>
                 </div>
@@ -431,7 +470,7 @@
 
                     <!-- CARD DEL GRÁFICO CIRCULAR DE CANTIDADES -->
                     <div class="card card-dark" style="flex:1; border-radius:16px; padding:20px; background:#2b2b3d;
-              display:flex; flex-direction:column; align-items:center;">
+                display:flex; flex-direction:column; align-items:center;">
                         <h4 style="color:#fff; margin-bottom:12px;">
                             Distribución de columnas usadas
                             <canvas id="downloadsChart" width="280px" height="280px"></canvas>
@@ -458,7 +497,7 @@
             </section>
         </main>
     </div>
-    <script src="/Programa/static/js/script.js"></script>
+    <script src="/FDS-2025-1-260/Programa/static/js/script.js"></script>
 </body>
 
 </html>
